# ProteusManager

./: .gitignore  CMakeLists.txt  README.md  appcontroller.cpp  appcontroller.h  databaseController.cpp  databaseController.h  databaseController.ui  datareader.cpp  main.cpp  mainwindow.cpp  mainwindow.h  parsedclass.h  tablegenerator.cpp  tablegenerator.ui  textfilemanager.cpp  textfilemanager.h
client/: ollamaclient.cpp  ollamaclient.h  ollamaenvironment.cpp  ollamaenvironment.h
database/: databasemanager.cpp  databasemanager.h
docs/: AI_SETUP.md  CLASS_TO_SQL.md  CODE_GENERATION.md  CONTEXTUAL_HELP.md  NORMALIZATION.md
qml/: Main.qml  MainMenuPage.qml  NormalizationPage.qml  ProgrammingCodeGeneratorPage.qml  SchemaDiagramView.qml  SchemaTableNode.qml  SettingHelpButton.qml  SqlGeneratorPage.qml
tests/: README.md  classparsertest.cpp  classscannertest.cpp  dalgenerationtest.cpp  databasemanagertest.cpp  normalizationplannertest.cpp  ollamaclienttest.cpp  ollamaenvironmenttest.cpp  qmlworkflowtest.cpp  sqloutputrecordertest.cpp  sqlvalidationtest.cpp
utils/: classparser.cpp  classparser.h  classscanner.cpp  classscanner.h  codegenerationprofile.cpp  codegenerationprofile.h  dalfileexporter.cpp  dalfileexporter.h  normalizationplanner.cpp  normalizationplanner.h  parsedattribute.h  parsedclass.h  programminglanguage.cpp  programminglanguage.h  sqloutputrecorder.cpp  sqloutputrecorder.h  textfilemanager.cpp  textfilemanager.h
windows/: databasecontroller.cpp  databasecontroller.h  databasecontroller.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablegenerator.cpp  tablegenerator.h  tablegenerator.ui
